--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,3 +1,12 @@
 * {
-    background-color: brown;
+    margin: 0;
+    padding: 0;
+
+}
+
+img {
+    width: 100px;
+    justify-content: center;
+    align-items: flex-end;
+
 }
