--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,12 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+}
 
+#Titulo-Nombre{
+    margin-top: 1%;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 img {
     width: 100px;
-    justify-content: center;
-    align-items: flex-end;
+}
 
+.caja{
+    width: auto;           /* ancho de la caja */
+    height: auto;          /* alto de la caja */  
+    display: flex;          /* activa flexbox */
+    justify-content: center;/* centra horizontalmente */
+    align-items: center;    /* centra verticalmente */
 }
