--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -25,9 +25,10 @@ img {
 }
 
 .caja{
-    width: auto;           /* ancho de la caja */
-    height: auto;          /* alto de la caja */  
-    display: flex;          /* activa flexbox */
-    justify-content: center;/* centra horizontalmente */
-    align-items: center;    /* centra verticalmente */
+    margin: 1%;
+    width: auto;        
+    height: auto;        
+    display: flex;         
+    justify-content: center;
+    align-items: center;
 }
