--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,7 +3,9 @@
     padding: 0;
 }
 
-
+.nombrebox{
+        background-color:rgb(164, 190, 238);
+}
 
 #Titulo-Nombre{
     margin: 0% 2% 0 2%;
@@ -84,6 +86,10 @@
     font-size: 250%;
 }
 
+.parrafo{
+    text-align: justify;
+}
+
 .boxpresentacion{
     margin: 0%
 }
@@ -98,11 +104,40 @@
 }
 
 #ulbox{
-    text-align: center;
+    text-align: left;
     margin: 3%;
 }
 
 .redesbox{
     width: 100%;
-    background-color:rgb(132, 167, 233);
+    background-color:rgb(164, 190, 238);
+    text-align: center;
+}
+
+.boximagenes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 20px;
+}
+
+#peronaslogo {
+  width: 40%;
+  margin-left: 5%;
+  border-radius: 10px;
+}
+
+.listabox {
+  margin-right: 5%;
+  text-align: left;
+}
+
+.lista {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.serviciosh2 {
+  margin-bottom: 10px;
 }
