--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,8 +3,16 @@
     padding: 0;
 }
 
+body{
+    font-family:Georgia, 'Times New Roman', Times, serif
+}
 .nombrebox{
-        background-color:rgb(164, 190, 238);
+    background-color:rgb(164, 190, 238);
+    padding: 3%;
+}
+
+.boxcolor{
+    padding: 5%;
 }
 
 #Titulo-Nombre{
@@ -12,7 +20,6 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-
 
 #linknosotrosbox{
     margin: 3%;
@@ -25,6 +32,51 @@
 }
 #linkiniciobox{
     margin: 3%;
+}
+
+.compo-imagenes{
+    width: flex;
+    height: auto;
+    margin: 50px auto 0;
+    overflow: hidden;
+    text-align: center;
+
+}
+
+.compo-imagenes ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 20s infinite alternate ease-in-out;
+}
+
+.compo-imagenes li{
+    width: 100%;
+    list-style: none;
+    position: relative;
+}
+
+.compo-imagenes img{
+    width: 100%;
+}
+
+@keyframes slide{
+    0% { margin-left: 0;}
+    20% { margin-left: 0;}
+
+    25% { margin-left: -100%;}
+    45% { margin-left: -100%;}
+
+    50% { margin-left: -200%;}
+    70% { margin-left: -200%;}
+
+    75% { margin-left: -300%;}
+    100% { margin-left: -300%;}
+}
+
+#imagencarrucel{
+    width: 60%;
+    justify-content: space-between;
 }
 
 @font-face {
@@ -56,7 +108,7 @@
     text-align: center;
 }
 .caja{
-    margin: 3%3% 3% 3%;
+    margin: 0%;
     width: auto;        
     height: auto;        
     display: flex;         
@@ -81,9 +133,10 @@
 }
 
 #quienesSomos{
-    margin: 5%;
     text-align: center;
+    padding: 3%;
     font-size: 250%;
+    background-color: rgb(164, 190, 238);
 }
 
 .parrafo{
@@ -115,29 +168,29 @@
 }
 
 .boximagenes {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 20px;
 }
 
 #peronaslogo {
-  width: 40%;
-  margin-left: 5%;
-  border-radius: 10px;
+    margin-left: 5%;
+    border-radius: 10px;
+    width: 40%;
 }
 
 .listabox {
-  margin-right: 5%;
-  text-align: left;
+    text-align: left;
+    margin-right: 5%;
 }
 
 .lista {
-  list-style-type: disc;
-  padding-left: 20px;
+    padding-left: 20px;
+    list-style-type: disc;
 }
 
 .serviciosh2 {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
